fix #2 time accessibility contrast contact.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -564,11 +564,11 @@ input#email {
 }
 input[type="submit"] {
     width: 100%;
-    padding: .4rem 0;
+    padding: .2rem 0;
     background-color: #2196f3;
     color: #ffffff;
-    font-size: 1.4rem;
-    font-weight: 600;
+    font-size: 1.3rem;
+    font-weight: bold;
 }
 input, textarea {
     border: 2px solid #2196f3;
